update styling in index.css to stop horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
   background: fixed;
+  overflow-x: hidden;
 }
 
 .card-border {
   background: -webkit-linear-gradient(-90.13deg, #b0b7c0 60.5%, #b5b7b6 99.9%);
-  /* box-shadow: ; */
 }
